--- a/charts/argo/values.yaml
+++ b/charts/argo/values.yaml
@@ -64,6 +64,7 @@ executor:
 
 ui:
   enabled: true
+  baseHref: /
   # only show workflows where UI installed
   forceNamespaceIsolation: false
   image:
